# bmx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 2026-06-10-h100-session-results.md  2026-06-11-frontier-breakeven.md  2026-06-11-k1-census-results.md  2026-06-11-kv-research-plan.md  2026-06-11-lrs-results.md  2026-06-12-k2-arms-results.md  2026-06-12-k2b-ppl-results.md  2026-06-12-k2c-results.md  2026-06-19-k3-handoff-and-workflow.md  2026-06-19-k3-streaming-cache-results.md  2026-06-20-longbench-plan-state.md  2026-06-20-niah-plan-state.md  2026-06-21-k2-eigwaterfill-results.md  2026-06-21-k2-structured-rotation-results.md  2026-06-21-k2-waterfill-results.md  2026-06-21-niah-longbench-frontier-results.md  2026-06-23-kernel-census-results.md  2026-06-23-kernel-plan-state.md  2026-06-24-decode-path-debloat-removal.md  2026-06-24-triton-decode-results.md  2026-07-01-baseline-parity-decision.md  2026-07-01-kv-code-cleanup-results.md  2026-07-01-paper-results-skeleton.md  2026-07-01-publication-readiness-assessment.md  HANDOFF.md  d0-literature-notes.md  friday-brief-tensor-compression.md  next-avenues-structured-residual.md
experiments/: _common.py  a2_matched_param.py  a3_permutation_null.py  b1_kernel_bench.py  c1_redundancy_census.py  c2_expert_structure.py  collect_cache.py  d1_gaussianization.py  distortion_bounds.py  frontier_breakeven.py  k1_cache_census.py  k2_cache_arms.py  k2_waterfill.py  k2b_cache_ppl.py  k2c_subspace_drift.py  k3_kernel_census.py  k3_live_generation.py  k3_longbench.py  k3_niah.py  k3_triton_decode.py  lrs_residual.py
(+457 files in other folders)
