[project]
name = "bmx"
version = "0.1.0"
description = "Tensor-decomposition weight-compression research framework (BMD / hypermatrix algebra on LLM weights)"
readme = "README.md"
authors = [
    { name = "pherber3", email = "" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "safetensors>=0.8.0",
    "scipy>=1.17.1",
    "tensorly>=0.9.0",
    "torch>=2.12.0",
    "transformers>=5.11.0",
    "tyro>=1.0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]
